--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,6 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: eu-west-2  # Replace with your AWS region
+          AWS_DEFAULT_REGION: eu-north-1  # Replace with your AWS region
         run: |
           aws s3 sync . http://zaktecsolutions.s3-website.eu-north-1.amazonaws.com/
