--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: eu-north-1  # Replace with your AWS region
         run: |
-          aws s3 sync . http://zaktecsolutions.s3-website.eu-north-1.amazonaws.com/
+          aws s3 sync . s3://zaktecsolutions
+          
